# CrystalSentinel-ARC

./: .gitignore  Cargo.toml  README.md  blueprint.txt
.cargo-target-local/: .rustc_info.json
.cargo-target-local/debug/.fingerprint/sentinel-bio-response-01400e2dc7ec8f0e/: lib-sentinel_bio_response  lib-sentinel_bio_response.json
.cargo-target-local/debug/.fingerprint/sentinel-bio-response-60f7132ae4081cae/: test-lib-sentinel_bio_response  test-lib-sentinel_bio_response.json
.cargo-target-local/debug/.fingerprint/sentinel-bio-response-7af0f2d6f0df30cf/: lib-sentinel_bio_response  lib-sentinel_bio_response.json
.cargo-target-local/debug/.fingerprint/sentinel-common-32cf5e4b421c77e2/: lib-sentinel_common  lib-sentinel_common.json
.cargo-target-local/debug/.fingerprint/sentinel-common-ce0ecbe4e7722041/: test-lib-sentinel_common  test-lib-sentinel_common.json
.cargo-target-local/debug/.fingerprint/sentinel-common-ffebf9780165882d/: lib-sentinel_common  lib-sentinel_common.json
.cargo-target-local/debug/.fingerprint/sentinel-config-05df4459e38fee2c/: lib-sentinel_config  lib-sentinel_config.json
.cargo-target-local/debug/.fingerprint/sentinel-config-5a13fe781ac5894f/: test-lib-sentinel_config  test-lib-sentinel_config.json
.cargo-target-local/debug/.fingerprint/sentinel-config-eb6ce83a3ccf1b3c/: lib-sentinel_config  lib-sentinel_config.json
.cargo-target-local/debug/.fingerprint/sentinel-console-api-0e4dab50b5b29573/: test-bin-sentinel-console-api  test-bin-sentinel-console-api.json
.cargo-target-local/debug/.fingerprint/sentinel-console-api-bad18d7eb54958ad/: bin-sentinel-console-api  bin-sentinel-console-api.json
.cargo-target-local/debug/.fingerprint/sentinel-console-api-c745bca7c534f3e4/: bin-sentinel-console-api  bin-sentinel-console-api.json
.cargo-target-local/debug/.fingerprint/sentinel-correlation-29bf791c7a889a5d/: lib-sentinel_correlation  lib-sentinel_correlation.json
.cargo-target-local/debug/.fingerprint/sentinel-correlation-2ac8fa916a614323/: output-test-lib-sentinel_correlation
.github/: README.md
apps/: README.md
apps/sentinel-console-api/: Cargo.toml
apps/sentinel-console-api/src/: main.rs
apps/sentinelctl/: Cargo.toml
apps/sentinelctl/src/: main.rs
apps/sentinelctl/tests/: replay.rs
apps/sentineld/: Cargo.toml
apps/sentineld/src/: main.rs
apps/sentineld/tests/: ingest.rs
configs/: README.md
configs/base/: defense-modules.toml  install-layout.toml  intel-sources.toml  runtime.toml
crates/: README.md
crates/sentinel-autonomy/: Cargo.toml
crates/sentinel-autonomy/src/: lib.rs
crates/sentinel-bio-response/: Cargo.toml
crates/sentinel-bio-response/src/: lib.rs
crates/sentinel-common/: Cargo.toml
crates/sentinel-common/src/: lib.rs
crates/sentinel-config/: Cargo.toml
crates/sentinel-config/src/: lib.rs
crates/sentinel-correlation/: Cargo.toml
crates/sentinel-correlation/src/: lib.rs
crates/sentinel-decoy/: Cargo.toml
crates/sentinel-decoy/src/: lib.rs
crates/sentinel-detection/: Cargo.toml
crates/sentinel-detection/src/: lib.rs
crates/sentinel-education/: Cargo.toml
crates/sentinel-education/src/: lib.rs
crates/sentinel-flow/: Cargo.toml
crates/sentinel-flow/src/: lib.rs
crates/sentinel-forensics/: Cargo.toml
crates/sentinel-forensics/src/: lib.rs
crates/sentinel-integrity/: Cargo.toml
crates/sentinel-integrity/src/: lib.rs
crates/sentinel-native-bridge/: Cargo.toml
crates/sentinel-native-bridge/src/: lib.rs
crates/sentinel-policy/: Cargo.toml
crates/sentinel-policy/src/: lib.rs
crates/sentinel-reporting/: Cargo.toml
crates/sentinel-reporting/src/: lib.rs
crates/sentinel-response/: Cargo.toml
crates/sentinel-response/src/: lib.rs
crates/sentinel-rules/: Cargo.toml
crates/sentinel-rules/src/: lib.rs
crates/sentinel-runtime/: Cargo.toml
crates/sentinel-runtime/src/: lib.rs
crates/sentinel-scenario/: Cargo.toml
crates/sentinel-scenario/src/: lib.rs
crates/sentinel-shadow-vault/: Cargo.toml
crates/sentinel-shadow-vault/src/: lib.rs
crates/sentinel-storage/: Cargo.toml
crates/sentinel-storage/src/: lib.rs
crates/sentinel-telemetry/: Cargo.toml
crates/sentinel-telemetry/src/: lib.rs
deploy/: README.md
deploy/launchd/: com.crystalsentinel.arc.sentineld.plist  com.crystalsentinel.sentineld.plist
deploy/systemd/: crystalsentinel-arc.service  crystalsentinel.service
deploy/windows-service/: Install-CrystalSentinelArcService.ps1  Install-CrystalSentinelService.ps1
docs/: README.md
docs/architecture/: REPOSITORY-STRUCTURE.md
docs/scenarios/: SCENARIO-TEMPLATE.md
native/: CMakeLists.txt  PHASE1_SELF_ASSESSMENT_SLICE.md  README.md
native/asm/src/: directive.asm  fastpath.asm  pressure_mix.asm
native/build-gcc/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
native/c/src/: budget_guard.c  dynamic_load_balancer.c  exposure_guard.c  guardian_handoff.c  heartbeat_audit.c  mesh_guard.c  protocol_budget.c  resource_guard.c
native/cpp/src/: ambient_state.cpp  behavior_matrix.cpp  classifier.cpp  guardian_reporter.cpp  mesh_gossip.cpp  recovery_predictor.cpp  scan_predictor.cpp
native/include/: sentinel_native.h
native/tests/: native_smoke.cpp
observability/: README.md
rules/: README.md  manifest.toml
rules/allowlists/: default.toml
rules/anomaly/: network-pressure.toml
rules/baselines/: fragile-assets.toml
rules/compiled/: balanced.rules
rules/heuristics/: behavioral-pressure.toml
rules/response-policies/: stability-first.toml
rules/signatures/: channel-detection.toml  scanning-detection.toml  traffic-detection.toml
rules/states/: balanced.states  high-guard.states  minimum.states
schemas/: README.md
scripts/: README.md
scripts/bootstrap/: install-linux.sh  install-macos.sh  install-windows.ps1
security/: README.md
testdata/: README.md
testdata/scenarios/: fragile-mesh-payload.json  identity-abuse-containment.json  scan-pressure-capture.json
testdata/telemetry/: sample-stream.jsonl
tests/: README.md
tools/: README.md
(+131 files in other folders)
