[workspace]
members = [
  "apps/sentineld",
  "apps/sentinelctl",
  "apps/sentinel-console-api",
  "crates/sentinel-common",
  "crates/sentinel-config",
  "crates/sentinel-autonomy",
  "crates/sentinel-telemetry",
  "crates/sentinel-flow",
  "crates/sentinel-detection",
  "crates/sentinel-decoy",
  "crates/sentinel-education",
  "crates/sentinel-integrity",
  "crates/sentinel-native-bridge",
  "crates/sentinel-correlation",
  "crates/sentinel-reporting",
  "crates/sentinel-runtime",
  "crates/sentinel-shadow-vault",
  "crates/sentinel-policy",
  "crates/sentinel-response",
  "crates/sentinel-rules",
  "crates/sentinel-forensics",
  "crates/sentinel-storage",
  "crates/sentinel-bio-response",
  "crates/sentinel-scenario",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
