[package]
name = "sentinelctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinel-detection = { path = "../../crates/sentinel-detection" }
sentinel-education = { path = "../../crates/sentinel-education" }
sentinel-native-bridge = { path = "../../crates/sentinel-native-bridge" }
sentinel-scenario = { path = "../../crates/sentinel-scenario" }

[[bin]]
name = "sentinelctl"
path = "src/main.rs"
