[package]
name = "sentineld"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinel-common = { path = "../../crates/sentinel-common" }
sentinel-correlation = { path = "../../crates/sentinel-correlation" }
sentinel-config = { path = "../../crates/sentinel-config" }
sentinel-detection = { path = "../../crates/sentinel-detection" }
sentinel-flow = { path = "../../crates/sentinel-flow" }
sentinel-native-bridge = { path = "../../crates/sentinel-native-bridge" }
sentinel-reporting = { path = "../../crates/sentinel-reporting" }
sentinel-runtime = { path = "../../crates/sentinel-runtime" }
sentinel-storage = { path = "../../crates/sentinel-storage" }
sentinel-telemetry = { path = "../../crates/sentinel-telemetry" }

[[bin]]
name = "sentineld"
path = "src/main.rs"
