[package]
name = "sentinel-correlation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinel-common = { path = "../sentinel-common" }
sentinel-runtime = { path = "../sentinel-runtime" }

[dev-dependencies]
sentinel-config = { path = "../sentinel-config" }
sentinel-telemetry = { path = "../sentinel-telemetry" }

[lib]
path = "src/lib.rs"
