[package]
name = "sentinel-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinel-common = { path = "../sentinel-common" }
sentinel-config = { path = "../sentinel-config" }
sentinel-decoy = { path = "../sentinel-decoy" }
sentinel-detection = { path = "../sentinel-detection" }
sentinel-education = { path = "../sentinel-education" }
sentinel-forensics = { path = "../sentinel-forensics" }
sentinel-integrity = { path = "../sentinel-integrity" }
sentinel-native-bridge = { path = "../sentinel-native-bridge" }
sentinel-policy = { path = "../sentinel-policy" }
sentinel-response = { path = "../sentinel-response" }
sentinel-telemetry = { path = "../sentinel-telemetry" }

[lib]
path = "src/lib.rs"
