[package]
name = "sentinel-scenario"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinel-common = { path = "../sentinel-common" }
sentinel-config = { path = "../sentinel-config" }
sentinel-correlation = { path = "../sentinel-correlation" }
sentinel-reporting = { path = "../sentinel-reporting" }
sentinel-runtime = { path = "../sentinel-runtime" }
sentinel-telemetry = { path = "../sentinel-telemetry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"
